fix: make scroll up button visible everywhere

--- a/src/components/ScrollUp/ScrollUp.scss
+++ b/src/components/ScrollUp/ScrollUp.scss
@@ -1,4 +1,5 @@
 .scroll-up {
+  z-index: 5;
   bottom: 20px;
   left: 20px;
   position: fixed;
